--- a/microservice-provider-dept-8002/src/main/resources/application.yml
+++ b/microservice-provider-dept-8002/src/main/resources/application.yml
@@ -8,11 +8,11 @@ mybatis:
 
 spring:
   application:
-    name: microservice-provider-dept-8002
+    name: microservice-provider-dept
   datasource:
     type: com.alibaba.druid.pool.DruidDataSource
     driver-class-name: org.gjt.mm.mysql.Driver
-    url: jdbc:mysql://localhost:3306/cloudDb
+    url: jdbc:mysql://localhost:3306/cloudDb02
     username: root
     password: yy123456
     dbcp2:
