--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,10 @@
         <module>microservice-eureka-7003</module>
         <module>microservice-provider-dept-8002</module>
         <module>microservice-provider-dept-8003</module>
+        <module>microservice-consumer-dept-feign</module>
+        <module>microservice-provider-dept-hystrix-8001</module>
+        <module>microservice-consumer-dept-hystrix-dashboard</module>
+        <module>microservice-zuul-gateway</module>
     </modules>
     <packaging>pom</packaging>
 
