--- a/microservice-consumer-dept-feign/src/main/resources/application.yml
+++ b/microservice-consumer-dept-feign/src/main/resources/application.yml
@@ -1,5 +1,5 @@
 server:
-  port: 80
+  port: 9527
 
 
 eureka:
@@ -8,7 +8,14 @@ eureka:
       service-url:
         defaultZone: http://eureka7001.com:7001/eureka/,http://eureka7002.com:7002/eureka/,http://eureka7003.com:7003/eureka/
 
-
+#开启断路器
 feign:
   hystrix:
     enabled: true
+
+
+
+info:
+  app.name: atguigu-microsevicecloud
+  comany.name: www.it.hgits.com
+
